--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -30,3 +30,8 @@
 .bars span.has-tooltip {
   cursor: help;
 }
+
+body {
+  background: url("/images/background.jpg") no-repeat center center fixed;
+  background-size: cover;
+}
