started adding a date picker - part of #11

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -35,3 +35,7 @@ body {
   background: url("/images/background.jpg") no-repeat center center fixed;
   background-size: cover;
 }
+
+.vdp-datepicker__calendar {
+  right: 0;
+}
